--- a/indexcom.html
+++ b/indexcom.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     <style>
     body{
-        background: url(images/bg.png);
+        background: url(bg.png);
         background-repeat: no-repeat;
         background-size: cover;
 }
@@ -116,7 +116,7 @@ h1{
 
 <div class="bgimg">
   <div class="topleft">
-    <img src="images/LOGO.png" alt="logo">
+    <img src="LOGO.png" alt="logo">
   </div>
   
   <div class="middle">
